// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML Block should render Default 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`HTML Block should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <div
-     class="css-1moxsbr-HtmlBlockWrapper e132jhwl0"
+     class="extra-classname css-1moxsbr-HtmlBlockWrapper e132jhwl0"
    >
      <div>
        <div
          style="color: red;"
        >"
`;

exports[`HTML Block should render WithEmotion 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`HTML Block should render WithScript 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      class="css-1moxsbr-HtmlBlockWrapper e132jhwl0"
    >
      <div>
+       
+       
        <div
          style="color: red;"
        >
-         This is a html embed
+         Checkout your console.
        </div>
+       
+       
+       <script>
+         console.log("This is a html embed")
+       </script>
+       
+     
      </div>
    </div>
  </DocumentFragment>"
`;
